[tool.poetry]
name = "stabilizer-ui"
version = "0.1"
description = "Stabilizer GUI to control an ARTIQ stabilizer over MQTT and visualise its data streams."
authors = ["OxfordIonTrapGroup"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
SiPyCo = { git = "https://github.com/m-labs/sipyco.git" }
python = "^3.9"
gmqtt = "^0.6.14"
qasync = "^0.27.1"
websockets = "^12.0"
pyqtgraph = "^0.13.4"
numpy = "^1.21.0"
stabilizer = { git = "https://github.com/OxfordIonTrapGroup/stabilizer.git", subdirectory = "py" }

# As of 2024-04-19, the newer releases of PyQt5-Qt5 on PyPi only have MacOS wheels.
# 5.15.2 is the latest release to support other platforms, but MacOS ARM builds 
# are only supported 5.15.11 onwards, so we pin platform-dependent dependencies.
PyQt5 = "^5.15.9"
PyQt5-Qt5 = [
    { platform = "darwin", version = "^5.15.11" },
    { markers = "sys_platform != 'darwin'", version = "=5.15.2" },
]

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.22.1"
toml = "^0.10.2"

# Pin exact versions of linters to avoid inconsistencies between CI environments.
# YAPF 0.33–0.40 split before comparison operators, rather than after, not matching the
# default behaviour for arithmetic operators, so stay on 0.32 for now – though at some
# point we might just update and not care.
yapf = "0.32.0"
flake8 = "6.1.0"

[tool.poetry.scripts]
l674_lock_ui = "stabilizer_ui.target.l674.app:main"
dual_iir_ui = "stabilizer_ui.target.dual_iir.app:main"
fnc_ui = "stabilizer_ui.target.fnc.app:main"

[tool.poe.tasks]
fmt = "yapf -ir stabilizer_ui"
lint = "flake8 stabilizer_ui"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
